:bug:[fix] z-index微修正

--- a/src/scss/admin-menu-rakuten-upload.scss
+++ b/src/scss/admin-menu-rakuten-upload.scss
@@ -132,6 +132,9 @@
 	.dragable-area {
 		border-style: dashed!important;
 	}
+	.navbar {
+		z-index: 20;
+	}
 
 	input:not(:checked) + .radio-icon {
 		display: inline-block;
